# turboquant

./: .gitignore  AGENTS.md  API_USAGE.md  CLI.md  QUICKSTART.md  QUICK_START_API.md  README.md  api_server.py  api_server_simple.py  benchmark_performance.py  client.py  demo.py  performance_analysis.py  pyproject.toml  run_inference.py  setup.py  start_api.sh  test_api.py  test_model.py
.cursor/hooks/state/: continual-learning.json
.github/workflows/: python-publish.yml
benchmarks/: fastvq_benchmark.py
fastvq/: __init__.py  cli.py
notebooks/: fastvq_quickstart.ipynb
npm-package/: .npmignore  AGENTS.md  README.md  demo.js  index.js  install.js  package.json  test.js  tsconfig.json
npm-package/src/: tui.tsx
tests/: test_cli_validation.py  test_fastvq_core.py
turboquant/: AGENTS.md  __init__.py  benchmarking.py  chat_server.py  cli.py  clipboard.py  codebooks.py  cuda.py  kv_cache.py  model_export.py  polarquant.py  qjl.py  simd.py  transforms.py  turboquant.py  utils.py
