[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant: Extreme compression for AI models with near-optimal distortion rates"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TurboQuant Contributors"}
]
keywords = ["quantization", "compression", "llm", "kv-cache", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]
torch = [
    "torch>=2.0.0",
]
all = [
    "torch>=2.0.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[project.scripts]
turboquant = "turboquant.cli:main"
tq = "turboquant.cli:main"

[project.urls]
Homepage = "https://github.com/turboquant/turboquant"
Documentation = "https://turboquant.readthedocs.io"
Repository = "https://github.com/turboquant/turboquant"
Issues = "https://github.com/turboquant/turboquant/issues"
Changelog = "https://github.com/turboquant/turboquant/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
