[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvq"
version = "0.2.0"
description = "FastVQ: fast vector quantization for AI model weights and KV caches"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FastVQ Contributors"}
]
keywords = ["quantization", "compression", "llm", "kv-cache", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "sentencepiece==0.2.1",
    "tiktoken>=0.5.0",
    "pyperclip>=1.8.0",
    "fonttools==4.60.2",
    "torch==2.8.0",
    "setuptools==78.1.1",
    "nbconvert==7.17.1",
    "pillow==12.2.0",
    "tornado==6.5.5",
    "urllib3==2.6.3",
    "pytest==9.0.3",
    "filelock==3.20.3",
    "requests==2.33.0",
    "jupyterlab==4.4.8",
    "pygments==2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]
bench = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
]
torch = [
    "torch>=2.0.0",
]
all = [
    "torch>=2.0.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
fastvq = "fastvq.cli:main"
turboquant = "turboquant.cli:main"
tq = "turboquant.cli:main"

[project.urls]
Homepage = "https://github.com/Zapdev-labs/Turboquant"
Documentation = "https://turboquant.readthedocs.io"
Repository = "https://github.com/Zapdev-labs/Turboquant.git"
Issues = "https://github.com/Zapdev-labs/Turboquant/issues"
Changelog = "https://github.com/Zapdev-labs/Turboquant/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant*", "fastvq*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
write_to = "turboquant/_version.py"
fallback_version = "0.2.0"
